fix vertical alignment issue

--- a/src/components/MultiSelect/MultiSelect.css
+++ b/src/components/MultiSelect/MultiSelect.css
@@ -5,7 +5,6 @@
 .select-container {
     display: flex;
     justify-content: center;
-    align-items: center;
     border: 1px solid #c7c7c7;
     border-radius: 3px;
 }
